# mcp-pdf-reader

./: README.md  pyproject.toml
src/pdf_reader_mcp/: server.py
